fixed intents for display page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".RecyclerActivity"></activity>
+        <activity android:name=".DisplayActivity"></activity>
     </application>
 
 </manifest>
